--- a/my_first_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/my_first_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = my_first_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.myFirstApp
+PRODUCT_BUNDLE_IDENTIFIER = com.googleCloudHackathon.gaid
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
